<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.oxilo.tsleehapp.fragment.ListDetailFragement"
    android:background="@color/light_gray">
        <!-- TODO: Update blank fragment layout -->

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_above="@+id/button_continue">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@color/color_white"
           tools:context="com.oxilo.tsleehapp.fragment.ListDetailFragement">
           <!-- TODO: Update blank fragment layout -->
           <TextView
               android:id="@id/separater"
               android:layout_width="match_parent"
               android:layout_height="@dimen/heading_margin"
               android:visibility="invisible"/>
           <TextView
               android:id="@id/estimate"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_alignParentStart="true"
               android:paddingTop="@dimen/content_top_padding_10"
               android:paddingBottom="@dimen/content_top_padding_10"
               android:layout_alignTop="@id/total_price"
               android:layout_alignBottom="@id/total_price"
               android:gravity="center"
               android:layout_marginLeft="@dimen/activity_horizontal_margin"
               android:textColor="@color/dark_blue"
               android:textSize="@dimen/estimate_text_size"
               android:text="@string/estimate" />

           <EditText
               android:id="@id/total_price"
               android:layout_width="@dimen/price_box_width"
               android:layout_height="@dimen/price_box_height"
               android:layout_alignParentEnd="true"
               android:focusable="false"
               android:padding="@dimen/content_top_padding_10"
               android:background="@drawable/edit_price"
               android:hint="@string/hint_price"
               android:gravity="center|left"
               android:textColorHint="@color/sky_blue"
               android:textColor="@color/sky_blue"
               android:layout_marginRight="@dimen/activity_horizontal_margin"
               android:textSize="@dimen/price_text_size"
               android:layout_marginLeft="@dimen/activity_horizontal_margin"
               android:layout_below="@id/separater"
               android:inputType="numberDecimal"/>
           <TextView
               android:id="@id/decs_req_string"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center|left"
               android:textColor="@color/gray"
               android:textSize="@dimen/content_text_size"
               android:text="@string/decs_req_string"
               android:layout_below="@id/estimate"
               android:layout_centerHorizontal="true"
               android:layout_alignLeft="@id/estimate"
               android:layout_alignRight="@id/total_price"
               android:layout_marginTop="@dimen/content_top_margin"/>

           <RelativeLayout
               android:id="@id/bhk_relative"
               android:layout_width="@dimen/bhk_relative_width"
               android:layout_height="@dimen/bhk_relative_height"
               android:background="@color/light_gray"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="@dimen/content_top_margin"
               android:layout_below="@id/decs_req_string">

               <ImageView
                   android:id="@id/minus"
                   android:layout_width="@dimen/view_incrementer_width"
                   android:layout_height="@dimen/view_incrementer_height"
                   android:background="@color/red"
                   android:src="@drawable/ic_minus"
                   android:padding="@dimen/padding_minus"
                   android:layout_alignParentStart="true"
                   android:layout_alignParentBottom="true"
                   />

               <ImageView
                   android:id="@id/plus"
                   android:layout_width="@dimen/view_incrementer_width"
                   android:layout_height="@dimen/view_incrementer_height"
                   android:background="@color/green"
                   android:layout_alignParentEnd="true"
                   android:padding="@dimen/padding_plus"
                   android:src="@drawable/ic_plus"
                   android:layout_alignParentBottom="true"/>



               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/string_2bhk"
                   android:layout_centerHorizontal="true"
                   android:textSize="@dimen/bhk_text_size"
                   android:textColor="@color/sky_blue"
                   android:layout_marginTop="@dimen/top_margin_for_bhk"
                   android:layout_alignParentTop="true" />

           </RelativeLayout>


           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_below="@id/bhk_relative"
               android:background="@color/light_gray"
               android:paddingLeft="@dimen/padding_plus"
               android:paddingRight="@dimen/padding_plus"
               android:layout_marginTop="@dimen/content_top_margin">

               <TextView
                   android:id="@id/temp_title"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/whats_included"
                   android:textSize="@dimen/bhk_text_size"
                   android:layout_centerHorizontal="true"
                   android:textColor="@color/sky_blue"
                   android:layout_marginTop="@dimen/content_top_padding_12" />
               <TextView
                   android:id="@id/temp_1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/pest_detail_script1"
                   android:textSize="@dimen/content_text_size"
                   android:textColor="@color/gray"
                   android:layout_below="@id/temp_title"
                   android:padding="@dimen/content_top_padding_10"/>
               <View
                   android:id="@id/seprator_1"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/seprator_size"
                   android:background="@color/gray"
                   android:layout_below="@id/temp_1"
                   android:layout_gravity="left" />
               <TextView
                   android:id="@id/temp_2"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/pest_detail_script2"
                   android:textSize="@dimen/content_text_size"
                   android:textColor="@color/gray"
                   android:layout_below="@id/seprator_1"
                   android:padding="@dimen/content_top_padding_10" />
               <View
                   android:id="@id/seprator_2"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/seprator_size"
                   android:background="@color/gray"
                   android:layout_below="@id/temp_2"/>
               <TextView
                   android:id="@id/temp_3"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/pest_detail_script3"
                   android:textSize="@dimen/content_text_size"
                   android:textColor="@color/gray"
                   android:layout_below="@id/seprator_2"
                   android:padding="@dimen/content_top_padding_10"  />


           </RelativeLayout>
       </RelativeLayout>
   </ScrollView>
    <android.support.v7.widget.AppCompatButton
        android:id="@id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:textColor="@color/color_white"
        app:backgroundTint="@color/sky_blue"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/content_top_padding_5"
        android:layout_marginLeft="@dimen/content_top_padding_5"
        android:layout_marginRight="@dimen/content_top_padding_5"/>

</RelativeLayout>
