<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LandingActivityFragment"
    android:background="@color/windowBackGround"
    tools:showIn="@layout/activity_landing">

    <RelativeLayout
        android:id="@id/layout_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/background_height"
        android:background="@drawable/ic_background_without_icon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_rectangle"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:id="@id/layout_linear">
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:entries="@array/selectCity" />
        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/ic_home_height"
            android:layout_marginTop="@dimen/ic_home_top_margin"
            android:src="@drawable/ic_home"
            android:scaleType="centerInside"
            android:layout_below="@id/layout_linear"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/separater"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/layout_relative"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/separater">

        <ImageView
            android:id="@id/button_cleaning"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:scaleType="fitXY"
            android:src="@drawable/ic_cleaning"/>
        <TextView
            android:id="@id/text_cleaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_cleaning"
            android:layout_alignLeft="@id/button_cleaning"
            android:layout_alignRight="@id/button_cleaning"
            android:text="@string/action_cleaning"
            android:gravity="center"
            android:textColor="@color/colorPrimary">

        </TextView>

        <ImageView
            android:id="@id/button_pest"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_pest_controll"/>
        <TextView
            android:id="@id/text_pest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_pest"
            android:layout_alignLeft="@id/button_pest"
            android:layout_alignRight="@id/button_pest"
            android:text="@string/action_pest"
            android:gravity="center"
            android:textColor="@color/colorPrimary">

        </TextView>

        <ImageView
            android:id="@id/button_electrical"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_electrical"/>
        <TextView
            android:id="@id/text_electrical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_electrical"
            android:layout_alignLeft="@id/button_electrical"
            android:layout_alignRight="@id/button_electrical"
            android:text="@string/action_electrical"
            android:gravity="center"
            android:textColor="@color/colorPrimary">

        </TextView>

        <ImageView
            android:id="@id/button_plumbing"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:layout_below="@id/text_cleaning"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/icon_top_margin"
            android:src="@drawable/ic_plumbing"/>

        <TextView
            android:id="@id/text_plumbing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_plumbing"
            android:layout_alignLeft="@id/button_plumbing"
            android:layout_alignRight="@id/button_plumbing"
            android:text="@string/action_plumbing"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>

        <ImageView
            android:id="@id/button_appliance"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:scaleType="fitCenter"
            android:layout_below="@id/text_pest"
            android:layout_marginTop="@dimen/icon_top_margin"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_appliances"/>
        <TextView
            android:id="@id/text_appliance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_appliance"
            android:layout_alignLeft="@id/button_appliance"
            android:layout_alignRight="@id/button_appliance"
            android:text="@string/action_appliance"
            android:gravity="center"
            android:textColor="@color/colorPrimary">

        </TextView>

        <ImageView
            android:id="@id/button_carpentry"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:scaleType="fitCenter"
            android:layout_below="@id/text_electrical"
            android:layout_marginTop="@dimen/icon_top_margin"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_carpentry"/>
        <TextView
            android:id="@id/text_carpentry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_carpentry"
            android:layout_alignLeft="@id/button_carpentry"
            android:layout_alignRight="@id/button_carpentry"
            android:text="@string/action_carpentry"
            android:gravity="center"
            android:textColor="@color/colorPrimary">

        </TextView>

    </RelativeLayout>

</RelativeLayout>
